src/test/resources/valid/numeric/computational/COMP.cpy
           06 EMP-SALARY PIC 99 COMP.