src/test/resources/invalid/numeric/computational/COMP-2INV.cpy
           10 EMP-SALARY PIC 99 COM-2.